--- a/task1.html
+++ b/task1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Resume</title>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="resume.css">
 </head>
 <style>
     h2{
@@ -71,7 +71,7 @@
 <li>Ability to present subject and issues clearly in Technical and non-Technical and Provide regular
 communication to management on assignment issues and status.</li>
 </ul>
-<hr/>
+<hr>
 <h2>TECHNICAL SKILLS:</h2>
 <ul type="auto" >
 <li id="skills">Html</li>
